--- a/views/index.html
+++ b/views/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <title>New Eden Faces</title>
+    <title>BC3000 Management System</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900"/>
     <link rel="stylesheet" href="/css/main.css"/>
 </head>
@@ -14,5 +14,6 @@
 <script src="/js/vendor.js"></script>
 <script src="/js/vendor.bundle.js"></script>
 <script src="/js/bundle.js"></script>
+
 </body>
 </html>
