--- a/views/index.html
+++ b/views/index.html
@@ -9,11 +9,14 @@
     <link rel="stylesheet" href="/css/main.css"/>
 </head>
 <body>
-<div id="app">{{ html|safe }}</div>
 <script src="/socket.io/socket.io.js"></script>
 <script src="/js/vendor.js"></script>
 <script src="/js/vendor.bundle.js"></script>
 <script src="/js/bundle.js"></script>
+
+<div id="login" hidden={{hide}}></div>
+<div id="app">{{ html|safe }}</div>
+
 
 </body>
 </html>
