finish add-unit button

--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -2,6 +2,10 @@
 @import '../../bower_components/toastr/toastr';
 @import (less) '../../bower_components/magnific-popup/dist/magnific-popup.css';
 
+.sidebarHorizontalRight{
+  margin-left: 100px;
+
+}
 
 /*
  * Bootstrap overrides.
